--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,124 @@
-html,
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&display=swap');
+
+html, 
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+.container {
+  display: flex;
+  flex-direction: column;
+  margin: 20px 50px;
 }
 
-* {
-  box-sizing: border-box;
+.section {
+  margin: 20px 0 0 0;
+  display: flex;
+  justify-content: space-between;
+}
+
+.information {
+  width: 60%;
+}
+
+.price-box {
+  display: flex;
+  flex-direction: column;
+  width: 35%;
+  height: 250px;
+  border: 1px solid rgb(221, 221, 221);
+  border-radius: 12px;
+  box-shadow: rgb(0, 0, 0, 12%) 0 6px 16px;
+  padding: 24px;
+  align-items: center;
+}
+
+.button {
+  width: 90%;
+  padding: 15px;
+  border-radius: 10px;
+  color: rgb(255, 255, 255);
+  text-align: center;
+  background: linear-gradient(135deg, rgb(255,56,92) 20%, rgb(189,20, 89));
+}
+
+.images-section {
+  display: flex;
+  flex-direction: column;
+  border-radius: 12px;
+}
+
+.sub-images-section {
+  display: flex;
+}
+
+.main-image {
+  width: 50%;
+  margin-bottom: 1rem;
+}
+
+.main-image img {
+  width: 100%;
+}
+
+.image img {
+  height: 150px;
+  padding-left: .5rem;
+}
+
+.review-description {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.traveller-image {
+  border-radius: 50%;
+  margin: 0 2rem 0 0;
+}
+
+.main {
+  display: flex;
+  flex-direction: row;
+}
+
+.feed-container {
+  width: 60%;
+  height: 100vh;
+  background-color: #f8f8f8;
+  padding: 20px;
+}
+
+.feed {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.card {
+  padding: 10px;
+}
+
+.map {
+  width: 50%;
+}
+
+.feed img {
+  border-radius: 20px;
+}
+
+nav {
+  position: sticky;
+  z-index: 100;
+  box-shadow: rgb(0, 0, 0, 12%) 0 6px 16px;
+  padding: 30px;
+}
+
+.logo {
+  width: 130px;
+  height: 45px;
+  background-image: url('../images/Airbnb-logo.jpg');
+  background-size: cover;
+  background-position: center;
 }
